# service-federation

./: .gitignore  CONTRIBUTING.md  Cargo.toml  ISSUE_TRACKER.md  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
docs/: commands.md  configuration.md  isolation.md  scripts.md
examples/: complex-dependencies.yaml  go-microservices.yaml  gradle-example.yaml  gradle-grouping.yaml  nodejs-microservices.yaml  profiles-example.yaml  python-fastapi.yaml  rails-sidekiq.yaml  resource-limits-example.yaml  scripts-example.yaml  simple.yaml  templates-example.yaml  test-variables.sh  variables-example.yaml
examples/complex-dependencies/: simple-test.sh  test.sh
examples/docker-compose-example/: docker-compose.yml  service-federation.yaml
examples/env-file/: .env.secrets  .env.shared  service-federation.yaml
examples/service-merging/: service-federation.yaml
hooks/: install.sh  pre-commit  pre-push
issue-docs/: SF-00155-isolated-reuses-containers.md
plans/: release-2.3.0.md  sf-00145-docker-client.md
src/: cli.rs  error.rs  lib.rs  lock_order.rs  main.rs  markers.rs  output.rs  watch.rs
src/commands/: build.rs  clean.rs  debug.rs  docker.rs  doctor.rs  init.rs  install.rs  isolate.rs  lifecycle.rs  logs.rs  mod.rs  package.rs  port.rs  ports.rs  restart.rs  script.rs  session.rs  start.rs  status.rs  stop.rs  top.rs  tui.rs  validate.rs  workspace.rs
src/config/: dependency.rs  duration.rs  env_loader.rs  environment.rs  health.rs  mod.rs  (+7 more)
tests/: background_mode_test.rs  chaos_test.rs  circular_dependency_test.rs  clean_test.rs  cli_subcommands_test.rs  complex_example_test.rs  config_test.rs  docker_build_test.rs  docker_compose_test.rs  docker_service_test.rs  dry_run_test.rs  edge_cases_test.rs  example_service_merging_test.rs  external_dependencies_test.rs  force_quit_recovery_test.rs  gradle_grouping_example_test.rs  gradle_grouping_test.rs  gradle_test.rs  healthcheck_startup_test.rs  integration_circuit_breaker.rs  lock_warning_integration_test.rs  package_integration_test.rs  pid_validation_test.rs  port_allocation_test.rs  port_toctou_test.rs  profiles_test.rs  proptest_state_machine.rs  replace_flag_test.rs  reproduction_tests.rs  resource_limits_test.rs  restart_all_test.rs  script_streaming_test.rs  scripts_test.rs  service_extension_test.rs  session_lifecycle_test.rs  state_tracker_test.rs  stop_state_recovery_test.rs  variables_test.rs
(+70 files in other folders)
