[package]
name = "service-federation"
version = "1.0.1"
edition = "2021"
authors = ["Adrian Helvik"]
description = "Service federation orchestrator for managing complex service dependencies"
license = "MIT"
repository = "https://github.com/service-federation/service-federation"
homepage = "https://github.com/service-federation/service-federation"
documentation = "https://github.com/service-federation/service-federation#readme"
readme = "README.md"
keywords = ["docker", "orchestration", "development", "microservices", "devtools"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.80"

[[bin]]
name = "fed"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "process", "sync", "signal", "time", "io-util", "macros", "fs"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
miette = { version = "7.0", features = ["fancy"] }

# HTTP client for health checks
reqwest = { version = "0.12", features = ["json"] }

# Regex for template parsing
regex = "1.10"

# Git operations
git2 = "0.19"

# Command lookup
which = "7.0"

# URL parsing
url = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process management
nix = { version = "0.29", features = ["signal", "process", "resource"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Database
tokio-rusqlite = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }

# File system operations
walkdir = "2.5"
dirs = "5.0"
fs2 = "0.4"
notify = "6.1"
notify-debouncer-full = "0.3"

# Concurrency primitives
parking_lot = "0.12"

# Random
rand = "0.8"

# Async trait
async-trait = "0.1"

# Shell escaping for secure command execution
shell-escape = "0.1"

# Environment file parsing
dotenvy = "0.15"

# TUI dependencies
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.6"
cli-clipboard = "0.4"
futures = "0.3"
unicode-width = "0.1"

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
proptest = "1.5"
rexpect = "0.5"
